tests/positive/Namespaces.juvix
module Namespaces;

module Main;

  module M;

    axiom A : Type;

  end;

  axiom M : Type;

end;

open Main using {module M; M};
open M;

axiom x : M.A;
axiom x1 : A;
axiom x2 : M;
