tests/negative/UsingHiding/Main.juvix
module Main;

module M;
axiom A : Type;
axiom B : Type;
end;

open M using {c};
